--- a/src/glade/lingot-config-dialog.glade
+++ b/src/glade/lingot-config-dialog.glade
@@ -41,6 +41,7 @@
                     <child>
                       <widget class="GtkComboBox" id="input_system">
                         <property name="visible">True</property>
+                        <property name="tooltip" translatable="yes">Here you can pick the sound system.</property>
                         <property name="items">OSS
 ALSA
 JACK</property>
@@ -91,6 +92,7 @@ JACK</property>
                     <child>
                       <widget class="GtkComboBoxEntry" id="input_dev">
                         <property name="visible">True</property>
+                        <property name="tooltip" translatable="yes">Choose the audio device if you have more than one. You cannot modify this field if you are using JACK, but you can connect Lingot to a desired source externally.</property>
                       </widget>
                       <packing>
                         <property name="left_attach">1</property>
@@ -127,6 +129,7 @@ JACK</property>
                     <child>
                       <widget class="GtkComboBoxEntry" id="sample_rate">
                         <property name="visible">True</property>
+                        <property name="tooltip" translatable="yes">Choose the hardware sample rate here. We give you some examples, but you can choose another one. Please, be aware that depending on the audio system and/or device, not all the sampling frequencies are available. Anyway, you can get close to your desired effective sample rate by combining this parameter with the oversampling factor (Basic tab). If you are using JACK, you cannot modify this field, but you can change it externally (in the JACK server configuration).</property>
                         <property name="items" translatable="yes"></property>
                       </widget>
                       <packing>
@@ -151,6 +154,7 @@ JACK</property>
             <child>
               <widget class="GtkLabel" id="input">
                 <property name="visible">True</property>
+                <property name="tooltip" translatable="yes">Audio input settings.</property>
                 <property name="label" translatable="yes">Capture</property>
               </widget>
               <packing>
@@ -270,6 +274,7 @@ JACK</property>
                     <property name="width_request">100</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="tooltip" translatable="yes">Number of calculations of the fundamental frequency per second.</property>
                     <property name="adjustment">25.199999999999999 1 30 1 0 0</property>
                   </widget>
                   <packing>
@@ -282,6 +287,7 @@ JACK</property>
                   <widget class="GtkHScale" id="visualization_rate">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="tooltip" translatable="yes">Number of visualizations per second of the (last) computed frequency, error and spectrum. </property>
                     <property name="adjustment">25 1 40 3 0 0</property>
                   </widget>
                   <packing>
@@ -296,6 +302,7 @@ JACK</property>
                   <widget class="GtkHScale" id="noise_threshold">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="tooltip" translatable="yes">Any signal level below this value will be considered as noise. This noise level is depicted in the spectrum area as a yellow dotted line.</property>
                     <property name="adjustment">90 0 100 1 10 0</property>
                   </widget>
                   <packing>
@@ -310,6 +317,7 @@ JACK</property>
                   <widget class="GtkHScale" id="gain">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="tooltip" translatable="yes">Allows you to adapt the signal levels without the aid of an external mixer.</property>
                     <property name="adjustment">27.699999999999999 -90 90 0.10000000000000001 0 0</property>
                   </widget>
                   <packing>
@@ -328,6 +336,7 @@ JACK</property>
             <child>
               <widget class="GtkLabel" id="label2">
                 <property name="visible">True</property>
+                <property name="tooltip" translatable="yes">Quick adjusments on the dynamic response and the signal levels.</property>
                 <property name="label" translatable="yes">Adjustments</property>
               </widget>
               <packing>
@@ -348,6 +357,7 @@ JACK</property>
                   <widget class="GtkSpinButton" id="temporal_window">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="tooltip" translatable="yes">This is the most recent amount of data considered for tuning. The longer it is, the more accuracy you can obtain, but also the dynamic response gets lower, because you are considering older parts of the signal. Also, if you raise this parameter, the computational cost increases. This value, in samples (depending on the effective sample rate), must be greater or equal to the FFT buffer size.</property>
                     <property name="xalign">1</property>
                     <property name="adjustment">0.32000000000000001 0 15 0.01 0 0</property>
                     <property name="digits">3</property>
@@ -363,6 +373,7 @@ JACK</property>
                 <child>
                   <widget class="GtkComboBox" id="fft_size">
                     <property name="visible">True</property>
+                    <property name="tooltip" translatable="yes">The FFT buffer gives Lingot a first look to the spectrum. Higher values can help Lingot to hook up the correct peak, but it's also computationally more expensive. Don't use high values here unless you have an equally high effective sample rate.</property>
                     <property name="items">256
 512
 1024
@@ -384,6 +395,7 @@ JACK</property>
                     <child>
                       <widget class="GtkLabel" id="label_sample_rate1">
                         <property name="visible">True</property>
+                        <property name="tooltip" translatable="yes">Hardware sampling frequency</property>
                         <property name="label">8000</property>
                       </widget>
                       <packing>
@@ -406,6 +418,7 @@ JACK</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="has_tooltip">True</property>
+                        <property name="tooltip" translatable="yes">Oversampling factor</property>
                         <property name="xalign">1</property>
                         <property name="adjustment">1 1 120 1 10 0</property>
                       </widget>
@@ -419,6 +432,7 @@ JACK</property>
                     <child>
                       <widget class="GtkLabel" id="label_sample_rate2">
                         <property name="visible">True</property>
+                        <property name="tooltip" translatable="yes">Effective sampling frequency. The lower this parameter is, the more accuracy the FFT will be, and hence the better is the hooking up to the correct peak. Remember, however,  that your temporal window will increase, and the fact that you won't be able to tune frequencies above the half of this frequency (Nyquist-Shannon sampling theorem).</property>
                         <property name="label"> = 2000</property>
                       </widget>
                       <packing>
@@ -518,6 +532,7 @@ JACK</property>
                   <widget class="GtkSpinButton" id="minimum_frequency">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="tooltip" translatable="yes">Lingot only considers frequencies above this frequency</property>
                     <property name="invisible_char">&#x25CF;</property>
                     <property name="xalign">1</property>
                     <property name="adjustment">0 0 22050 1 0 0</property>
@@ -552,6 +567,7 @@ JACK</property>
             <child>
               <widget class="GtkLabel" id="label3">
                 <property name="visible">True</property>
+                <property name="tooltip" translatable="yes">Basic settings on the frequency finding algorithm.</property>
                 <property name="label" translatable="yes">Basic</property>
               </widget>
               <packing>
@@ -636,6 +652,7 @@ JACK</property>
                     <property name="width_request">100</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="tooltip" translatable="yes">All the peaks with an amplitude difference with the highest one greater than this parameter will be rejected as a candidate to host the fundamental frequency</property>
                     <property name="adjustment">29.199999999999999 0 50 1 0 0</property>
                   </widget>
                   <packing>
@@ -650,6 +667,7 @@ JACK</property>
                   <widget class="GtkSpinButton" id="peak_halfwidth">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="tooltip" translatable="yes">Number of samples needed by a peak at each side, lower in amplitude than the sample at the center, to be considered as a peak.</property>
                     <property name="xalign">1</property>
                     <property name="adjustment">1 1 5 1 10 0</property>
                   </widget>
@@ -665,6 +683,7 @@ JACK</property>
                   <widget class="GtkSpinButton" id="peak_number">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="tooltip" translatable="yes">Number of main peaks considered over the FFT. Remember that sometimes the first harmonics can have a higher amplitude than the fundamental component.</property>
                     <property name="xalign">1</property>
                     <property name="adjustment">1 1 10 1 10 0</property>
                   </widget>
@@ -680,6 +699,7 @@ JACK</property>
                   <widget class="GtkSpinButton" id="dft_size">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="tooltip" translatable="yes">Number of samples of each DFT.</property>
                     <property name="xalign">1</property>
                     <property name="adjustment">4 4 100 1 10 0</property>
                   </widget>
@@ -706,6 +726,7 @@ JACK</property>
                   <widget class="GtkSpinButton" id="dft_number">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="tooltip" translatable="yes">After having chosen the fundamental peak on the FFT, Lingot computes a series of N (being N this parameter) DFTs localized in frequency to enclose the fundamental frequency.</property>
                     <property name="xalign">1</property>
                     <property name="adjustment">0 0 10 1 10 0</property>
                   </widget>
@@ -769,6 +790,7 @@ JACK</property>
             <child>
               <widget class="GtkLabel" id="label4">
                 <property name="visible">True</property>
+                <property name="tooltip" translatable="yes">Advanced settings on the frequency finding algorithm.</property>
                 <property name="label" translatable="yes">Advanced</property>
               </widget>
               <packing>
@@ -800,6 +822,7 @@ JACK</property>
                       <widget class="GtkEntry" id="scale_name">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="tooltip" translatable="yes">Scale name, only for your information.</property>
                         <property name="invisible_char">&#x25CF;</property>
                       </widget>
                       <packing>
@@ -846,6 +869,7 @@ JACK</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="tooltip" translatable="yes">Adds a new pitch to the list, just above the selected line, or appends it to the end if no line is selected.</property>
                               </widget>
                               <packing>
                                 <property name="expand">False</property>
@@ -859,6 +883,7 @@ JACK</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="tooltip" translatable="yes">Deletes the selected lines.</property>
                               </widget>
                               <packing>
                                 <property name="expand">False</property>
@@ -872,6 +897,7 @@ JACK</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="tooltip" translatable="yes">Imports the scale from an external .scl file, with the Scala project format (http://www.huygens-fokker.org/scala/)</property>
                               </widget>
                               <packing>
                                 <property name="expand">False</property>
@@ -967,6 +993,7 @@ JACK</property>
             <child>
               <widget class="GtkLabel" id="label7">
                 <property name="visible">True</property>
+                <property name="tooltip" translatable="yes">Lingot is an universal tuner, it can tune any instrument according to the scale you define here.</property>
                 <property name="xpad">1</property>
                 <property name="label" translatable="yes">Scale</property>
               </widget>
@@ -991,6 +1018,7 @@ JACK</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="tooltip" translatable="yes">Resets the built-in settings, without applying them.</property>
               </widget>
               <packing>
                 <property name="expand">False</property>
@@ -1004,6 +1032,7 @@ JACK</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="tooltip" translatable="yes">Apply the current changes to the running tuner, but doesn't modify the configuration file.</property>
                 <property name="use_stock">True</property>
               </widget>
               <packing>
@@ -1018,6 +1047,7 @@ JACK</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="tooltip" translatable="yes">Apply the current changes and modify the congifuration file.</property>
                 <property name="use_stock">True</property>
               </widget>
               <packing>
@@ -1032,6 +1062,7 @@ JACK</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="tooltip" translatable="yes">Rolls back all the previous applied changes and closes the configuration dialog.</property>
                 <property name="use_stock">True</property>
               </widget>
               <packing>
