--- a/src/glade/lingot-config-dialog.glade
+++ b/src/glade/lingot-config-dialog.glade
@@ -44,7 +44,8 @@
                         <property name="tooltip" translatable="yes">Here you can pick the sound system.</property>
                         <property name="items">OSS
 ALSA
-JACK</property>
+JACK
+PulseAudio</property>
                         <signal name="changed" handler="on_combobox_input_architecture_changed"/>
                       </widget>
                       <packing>
@@ -93,6 +94,7 @@ JACK</property>
                       <widget class="GtkComboBoxEntry" id="input_dev">
                         <property name="visible">True</property>
                         <property name="tooltip" translatable="yes">Choose the audio device if you have more than one. You cannot modify this field if you are using JACK, but you can connect Lingot to a desired source externally.</property>
+                        <property name="items" translatable="yes"></property>
                       </widget>
                       <packing>
                         <property name="left_attach">1</property>
