--- a/src/glade/lingot-config-dialog.glade
+++ b/src/glade/lingot-config-dialog.glade
@@ -44,8 +44,7 @@
                         <property name="tooltip" translatable="yes">Here you can pick the sound system.</property>
                         <property name="items">OSS
 ALSA
-JACK
-PulseAudio</property>
+JACK</property>
                         <signal name="changed" handler="on_combobox_input_architecture_changed"/>
                       </widget>
                       <packing>
