--- a/src/glade/lingot-config-dialog.glade
+++ b/src/glade/lingot-config-dialog.glade
@@ -42,10 +42,7 @@
                       <widget class="GtkComboBox" id="input_system">
                         <property name="visible">True</property>
                         <property name="tooltip" translatable="yes">Here you can pick the sound system.</property>
-                        <property name="items">OSS
-ALSA
-JACK
-PulseAudio</property>
+                        <property name="items"></property>
                         <signal name="changed" handler="on_combobox_input_architecture_changed"/>
                       </widget>
                       <packing>
