--- a/src/glade/lingot-config-dialog.glade
+++ b/src/glade/lingot-config-dialog.glade
@@ -263,15 +263,11 @@
                       <object class="GtkComboBox" id="sample_rate">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="tooltip_text" translatable="yes">Choose the hardware sample rate here. We give you some examples, but you can choose another one. Please, be aware that depending on the audio system and/or device, not all the sampling frequencies are available. Anyway, you can get close to your desired effective sample rate by combining this parameter with the oversampling factor (Basic tab). If you are using JACK, you cannot modify this field, but you can change it externally (in the JACK server configuration).</property>
                         <property name="model">liststore1</property>
                         <property name="has_entry">True</property>
                         <property name="entry_text_column">0</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext1"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
+                        <signal name="changed" handler="on_combobox_input_architecture_changed" swapped="no"/>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -287,8 +283,6 @@
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Here you can pick the sound system.</property>
                         <property name="model">liststore2</property>
-                        <property name="wrap_width">2</property>
-                        <property name="column_span_column">8</property>
                         <signal name="changed" handler="on_combobox_input_architecture_changed" swapped="no"/>
                         <child>
                           <object class="GtkCellRendererText" id="cellrenderertext2"/>
@@ -307,15 +301,11 @@
                       <object class="GtkComboBox" id="input_dev">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="tooltip_text" translatable="yes">Choose the audio device if you have more than one. If you are using JACK, you can also connect Lingot to a desired source with an external JACK control application.</property>
                         <property name="model">liststore4</property>
                         <property name="has_entry">True</property>
                         <property name="entry_text_column">0</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext4"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
+                        <signal name="changed" handler="on_combobox_input_architecture_changed" swapped="no"/>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
